kubernates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  labels:
    app: wisecow
spec:
  type: NodePort
  selector:
    app: wisecow
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4499
      nodePort: 30080
